--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-        <img src="tongne.jpg">
+        <img src="tongue.jpg">
         <p>whelcom to my blog</p>
     </header>
     <div class="top-wrapper">
@@ -34,7 +34,7 @@
     </div>
    
     <footer>
-        <img src="tongne.jpg" >
+        <img src="tongue.jpg" >
         <p>thank you for brousing</p>
     </footer>
   </body>
