--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <header>
-        <img src="tongue.jpg">
-        <p>whelcom to my blog</p>
+        <img src="tongue.jpg"  width="30" height="30">
+        <div class="header-list"></div>
+            <ul>
+                <li>このサイトの概要</li>
+                <li>佐藤とは</li>
+                <li>お問い合わせ</li>
+            </ul>
     </header>
     <div class="top-wrapper">
         <img src="zekkei2.jpg">
@@ -20,11 +25,11 @@
         <div class="container">
             <div class="container">
                 <div class="component">
-                    <img src="question-mark.png">
+                    <img src="question-mark.png"  width="50" height="50">
                     <p>幼少期</p>
                 </div>
                 <div class="component">
-                    <img src="question-mark.png">                    
+                    <img src="question-mark.png"  width="50" height="50">                    
                     <p>青年期</p>
                 </div>                     
                 
@@ -34,7 +39,7 @@
     </div>
    
     <footer>
-        <img src="tongue.jpg" >
+        <img src="tongue.jpg"  width="30" height="30" >
         <p>thank you for brousing</p>
     </footer>
   </body>
