--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
     </header>
     <div class="top-wrapper">
-        <img src="zekkei2.jpg">
+        <img src="zekkei2.jpg" width="50" height="50">
              
         
     </div>
