--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             </ul>
     </header>
     <div class="top-wrapper">
-        <img src="zekkei2.jpg" width="auto" height="100">
-             
+        <div class="container">
+            <p>Whelcome to my world!!!</p>
+        </div>             
         
     </div>
 
