--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-        <img src="tongue.jpg"  width="80px" height="80px">
+        <div class="header-logo">佐藤</div>
         <div class="header-list"></div>
             <ul>
                 <li>このサイトの概要</li>
