--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div class="top-wrapper">
         <div class="container">
-            <p>Whelcome to my world!!!</p>
+            <p>Welcome to my world!!!</p>
         </div>             
         
     </div>
