--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>　佐藤of佐藤　</title>
+    <title>佐藤of佐藤</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -40,8 +40,8 @@
     </div>
    
     <footer>
-        <img src="tongue.jpg"  width="80px" height="80px" >
-        <p>thank you for brousing</p>
+        
+        <p>Thank you for visiting my web site!!!</p>
     </footer>
   </body>
 </html>
