--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
             <div class="container">
                 <div class="component">
                     <img src="question-mark.png"  width="50" height="50">
-                    <p>幼少期</p>
+                    <p>成果物</p>
                 </div>
                 <div class="component">
                     <img src="question-mark.png"  width="50" height="50">                    
-                    <p>青年期</p>
-                </div>                     
-                
+                    <p>現在取り組んでいる物</p>
+                </div>
+                <div class="component">
+                    <img src="question-mark.png"  width="50" height="50">                    
+                    <p>今後の目標</p>
+                </div>           
+                <div class="component">
+                    <img src="question-mark.png"  width="50" height="50">                    
+                    <p>夢</p>
+                </div>      
+
             </div>
 
         </div>
