--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="container">
                 <div class="component">
                     <img src="question-mark.png"  width="200" height="200">
-                    <p>成果物</p>
+                    <p>わての成果物</p>
                 </div>
                 <div class="component">
                     <img src="question-mark.png"  width="200" height="200">                    
-                    <p>現在取り組んでいる物</p>
+                    <p>取組んでいるもの</p>
                 </div>
                 <div class="component">
                     <img src="question-mark.png"  width="200" height="200">                    
@@ -39,7 +39,7 @@
                 </div>           
                 <div class="component">
                     <img src="question-mark.png"  width="200" height="200">                    
-                    <p>夢</p>
+                    <p>10年後の夢</p>
                 </div>      
 
             </div>
