--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <title>佐藤of佐藤</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   </head>
   <body>
     <header>
-        <div class="header-logo">佐藤</div>
-        <div class="header-list"></div>
+        <div class="header-logo">Menu</div>
+        <div class="header-list">
             <ul>
-                <li>このサイトの概要</li>
-                <li>佐藤とは</li>
-                <li>お問い合わせ</li>
+                <li>Who I am</li>
+                <li>About</li>
+                <li>Access</li>
             </ul>
+        </div>
     </header>
     <div class="top-wrapper">
         <div class="container">
@@ -23,26 +25,29 @@
     </div>
 
     <div class="medium-wrapper">
+        <div class="medium-heading">
+            <h1>What's up!</h1>
+        </div>
         <div class="container">
-            <div class="container">
+            
                 <div class="component">
-                    <img src="question-mark.png"  width="200" height="200">
+                    <img src="img/question-mark.png"  width="200" height="200">
                     <p>わての成果物</p>
                 </div>
                 <div class="component">
-                    <img src="question-mark.png"  width="200" height="200">                    
+                    <img src="img/question-mark.png"  width="200" height="200">                    
                     <p>取組んでいるもの</p>
                 </div>
                 <div class="component">
-                    <img src="question-mark.png"  width="200" height="200">                    
+                    <img src="img/question-mark.png"  width="200" height="200">                    
                     <p>今後の目標</p>
                 </div>           
                 <div class="component">
-                    <img src="question-mark.png"  width="200" height="200">                    
+                    <img src="img/question-mark.png"  width="200" height="200">                    
                     <p>10年後の夢</p>
                 </div>      
 
-            </div>
+            
 
         </div>
     </div>
