--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="container">
             
                 <div class="component">
-                    <img src="img/question-mark.png"  width="200" height="200">
+                    <img src="question-mark.png"  width="200" height="200">
                     <p>わての成果物</p>
                 </div>
                 <div class="component">
-                    <img src="img/question-mark.png"  width="200" height="200">                    
+                    <img src="question-mark.png"  width="200" height="200">                    
                     <p>取組んでいるもの</p>
                 </div>
                 <div class="component">
-                    <img src="img/question-mark.png"  width="200" height="200">                    
+                    <img src="question-mark.png"  width="200" height="200">                    
                     <p>今後の目標</p>
                 </div>           
                 <div class="component">
-                    <img src="img/question-mark.png"  width="200" height="200">                    
+                    <img src="question-mark.png"  width="200" height="200">                    
                     <p>10年後の夢</p>
                 </div>      
 
